# lp1projeto1

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO
docs/: text_color.h
src/: cli.cpp  gamestate.cpp  gamestate.h  gametable.cpp  gametable.h  main.cpp  play.cpp  play.h  util.cpp  util.h
